some refactors with sonarlint